show animations, movie details, add more documentation

--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -11,6 +11,7 @@
         android:id="@+id/image_button"
         android:layout_width="131dp"
         android:layout_height="207dp"
+        android:scaleType="center"
         android:contentDescription="@string/img_content_desc" />
 
 </FrameLayout>
