--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -5,15 +5,97 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieDetailActivity">
+    tools:context=".MovieDetailActivity"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp">
 
     <ImageButton
         android:id="@+id/detail_img"
-        android:layout_width="300dp"
-        android:layout_height="450dp"
+        android:layout_width="250dp"
+        android:layout_height="380dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="abcde"/>
+        android:scaleType="fitCenter"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:contentDescription="@string/img_content_desc" />
+
+    <TextView
+        android:id="@+id/txt_detail_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.Material3.TitleMedium"
+        app:layout_constraintTop_toBottomOf="@id/detail_img"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <RatingBar
+        android:id="@+id/rtb_movie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="10"
+        app:layout_constraintTop_toBottomOf="@id/txt_detail_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:elevation="4dp"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        android:layout_margin="16dp"
+        style="@style/Widget.AppCompat.RatingBar.Small"
+        android:progressTint="@color/rating_stars"
+        />
+
+    <TextView
+        android:id="@+id/txt_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.Material3.TitleLarge"
+        app:layout_constraintTop_toBottomOf="@id/rtb_movie"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/txt_overview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.Material3.TitleSmall"
+        app:layout_constraintTop_toBottomOf="@id/txt_rating"
+        android:text="@string/txt_overview"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_detail_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.Material3.BodyMedium"
+        android:layout_marginTop="21dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_overview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/txt_genres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.Material3.TitleSmall"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_detail_description"
+        android:text="@string/txt_genres"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <RadioGroup
+        android:id="@+id/rbg_genres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@+id/txt_genres"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
