--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_container">#EADDFF</color>
     <color name="rating_stars">#ffd700</color>
+    <color name="error">#B3261E</color>
 </resources>
