--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,10 @@
         android:layout_height="match_parent"
         android:text="@string/error_troubleshoot1"
         android:textAlignment="center"
-        android:textColor="@color/error"
+        android:textColor="@color/black"
+        android:background="@color/error_container"
+        style="@style/TextAppearance.Material3.BodyLarge"
+        android:visibility="gone"
         />
 
 </LinearLayout>
